# photometric_stereo

./: CMakeLists.txt  ReadMe.md  config.yaml  install_dependencies.sh
common/include/photometric_stereo/: photometric_stereo.h  settings.h
common/src/: photometric_stereo.cpp
src/: face_yale.cpp  main_color_data.cpp  main_gray_data.cpp
